# notifications

./: Cargo.toml  README.md  build.rs
core/: Cargo.toml
core/src/: lib.rs
src/: bindings.rs  lib.rs  wrapper.h
sys/: Cargo.toml
sys/src/: bindings.rs  wrapper.h
