[package]
name = "notifications"
description = "Overlay Notifications"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/notifications"
publish = false
build = "build.rs"
links = "notifications"

[lib]
name = "notifications"
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.71.1"

[profile]
dev.panic = "abort"
release.panic = "abort"


[dependencies]
flagset = { version = "0.4.6", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
wut = { git = "https://github.com/rust-wiiu/wut", branch = "v0.3.0" }
