[package]
name = "notifications"
description = "Overlay Notifications"
version = "0.3.1"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/notifications"
publish = false

[profile]
dev.panic = "abort"
release.panic = "abort"


[dependencies]
notifications-sys = { path = "./sys", version = "0.1.0" }
notifications-core = { path = "./core", version = "0.1.0" }
