[package]
name = "notifications-core"
version = "0.1.0"
edition = "2024"

[dependencies]
flagset = { version = "0.4.6", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
notifications-sys = { path = "../sys", version = "0.1.0" }
wut = { git = "https://github.com/rust-wiiu/wut", tag = "v0.4.0" }
